--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col">
       <h1>Awesome Products</h1>
       <% @products.each do |product| %>
-        <div class="card-product">
+        <div class="card-product my-1">
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <div class="card-product-infos">
             <h2>Skello</h2>
