added margin to top

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col mt-3">
       <h1>Awesome Products</h1>
       <% @products.each do |product| %>
         <div class="card-product my-1">
